CSS Hero (left Column)

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <header>
         <a href="#"><img src="./images/logo.svg" alt="Logo" /></a>
         <nav>
-          <ul>
+          <ul class="main-nav">
             <li><a class="active">Home</a></li>
             <li><a href="">Products</a></li>
             <li><a href="">Gallery</a></li>
@@ -25,10 +25,11 @@
           </ul>
         </nav>
       </header>
+
       <main>
         <div class="left-col">
           <h1>Quality apparel without the price tag</h1>
-          <p>
+          <p class="subhead">
             No need to spend $xxx on apparel just for the name’s sake. Our
             premium apparel is made from the same stuff.
           </p>
@@ -36,15 +37,9 @@
             <a href="#" class="primary-cta">Browse our collection</a>
             <a href="#" class="secondary-cta">
               <span>Spring '23 Collection</span>
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="19"
-                height="9"
-                viewBox="0 0 19 9"
-                fill="none"
-              >
+              <svg viewBox="0 0 19 8" fill="none">
                 <path
-                  d="M18.3536 4.85355C18.5488 4.65829 18.5488 4.34171 18.3536 4.14645L15.1716 0.964466C14.9763 0.769204 14.6597 0.769204 14.4645 0.964466C14.2692 1.15973 14.2692 1.47631 14.4645 1.67157L17.2929 4.5L14.4645 7.32843C14.2692 7.52369 14.2692 7.84027 14.4645 8.03553C14.6597 8.2308 14.9763 8.2308 15.1716 8.03553L18.3536 4.85355ZM0 5H18V4H0V5Z"
+                  d="M18.3536 4.35355C18.5488 4.15829 18.5488 3.84171 18.3536 3.64645L15.1716 0.464466C14.9763 0.269204 14.6597 0.269204 14.4645 0.464466C14.2692 0.659728 14.2692 0.976311 14.4645 1.17157L17.2929 4L14.4645 6.82843C14.2692 7.02369 14.2692 7.34027 14.4645 7.53553C14.6597 7.7308 14.9763 7.7308 15.1716 7.53553L18.3536 4.35355ZM0 4.5H18V3.5H0V4.5Z"
                   fill="black"
                 />
               </svg>
